# YatSistemi_MerkeziKartve7oda

./: .cproject  .project  LedBoard Debug.launch  LedBoard.ioc  README.md  STM32F105R8TX_FLASH.ld  roleBoard Debug.launch  roleBoard.ioc
Core/Inc/: main.h  relay_node.h  usrCan.h  usrCanIDList.h  usrGeneral.h  usrLedControl.h
Core/Src/: main.c  relay_node.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usrCan.c  usrGeneral.c  usrLedControl.c
Debug/: LedBoard.elf  LedBoard.list  LedBoard.map  makefile  objects.list  roleBoard.elf  roleBoard.list  roleBoard.map
Debug/Core/Src/: main.cyclo  main.d  main.su  relay_node.cyclo  relay_node.d  relay_node.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  stm32f1xx_it.cyclo  stm32f1xx_it.su  subdir.mk  usrCan.cyclo  usrCan.d  usrCan.su  usrGeneral.cyclo  usrGeneral.d  usrGeneral.su  usrLedControl.cyclo  usrLedControl.d  usrLedControl.su
components/components/driver/twai/: twai.c
main/: CMakeLists.txt  main.c  usrCAN.c  usrCAN.h  usrCanDynamicIDMaster.c  usrCanDynamicIDMaster.h  usrGeneral.h  usrGeneralDefines.h  usrGraphicalInterface.c  usrGraphicalInterface.h  usrLightingPage.c  usrLightingPage.h  usrRoomConfig.c  usrRoomConfig.h  usrSettingsPage.c  usrSettingsPage.h  usrSocketsPage.c  usrSocketsPage.h  usrToiletPage.c  usrToiletPage.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
